src/Token.h

    

    //****************************************************************
    //* * * * * * * * * * * *  Data Definitions  * * * * * * * * * * *
    //****************************************************************


    typedef struct Token_data_s	TOKEN_DATA;            // Inherits from OBJ
    TOKEN_DATA *    Token_New (
        void
    );
    /*!
     Get the token's data as an AStr object.
     @return    If successful, an AStr object which must be released,
                otherwise OBJ_NIL.
     @warning   Remember to release the returned AStr object.
     */
    ASTR_DATA *     Token_getTextAStr(
        TOKEN_DATA      *this
    );
    /* Type is the internal type of the token itself
     * such as Text, Char, StmIdx, etc. Class is used
     * categorize the token stream.
     */
    uint16_t        Token_getType(
        TOKEN_DATA      *this
    );
    /*!
     Copy the current object creating a new object.
     Example:
     @code
        Token      *pCopy = Token_Copy(this);
     @endcode
     @param     this    object pointer
     @return    If successful, a TOKEN object which must be
                released, otherwise OBJ_NIL.
     @warning   Remember to release the returned object.
     */
    TOKEN_DATA *    Token_Copy (
        TOKEN_DATA      *this
    );
    /*!
     Create a string that describes this object and the objects within it in
     HJSON formt. (See hjson object for details.)
     Example:
     @code
     ASTR_DATA      *pDesc = Token_ToJson(this);
     @endcode
     @param     this    object pointer
     @return    If successful, an AStr object which must be released containing the
                JSON text, otherwise OBJ_NIL and LastError set to an appropriate
                ERESULT_* error code.
     @warning   Remember to release the returned AStr object.
     */
    ASTR_DATA *     Token_ToJson(
        TOKEN_DATA   *this
    );
    /*!
     Create a string that describes this object and the objects within it.
     Example:
     @code 
        ASTR_DATA      *pDesc = Token_ToDebugString(this,4);
     @endcode 
     @param     this    object pointer
     @param     indent  number of characters to indent every line of output, can be 0
     @return    If successful, an AStr object which must be released containing the
                description, otherwise OBJ_NIL.
     @warning   Remember to release the returned AStr object.
     */
    ASTR_DATA *    Token_ToDebugString (
        TOKEN_DATA     *this,
        int             indent
    );