src/array.h

    

    //****************************************************************
    //* * * * * * * * * * * *  Data Definitions  * * * * * * * * * * *
    //****************************************************************


    typedef struct array_data_s	ARRAY_DATA;    // Inherits from OBJ.
    
    
    ARRAY_DATA *    array_New(
        void
    );
    
    
    ARRAY_DATA *    array_NewWithSize(
        uint16_t        elemSize        // Element Size in bytes
    );
    uint32_t        array_getSize(
        ARRAY_DATA      *this
    );
    /*!
     Pop() removes the last entry from the end of the array.
     @param     this    object pointer
     @param     pData   optional non-null pointer where the entry will
                        be copied to if given
     @return:   If successful, ERESULT_SUCCESS. Otherwise, an
                ERESULT_* error code.
     */
    ERESULT         array_Pop (
        ARRAY_DATA      *this,
        void            *pData
    );
    /*!
     Push() adds the supplied entry to the end of the array
     making it the last entry.
     @param     this    object pointer
     @param     pData   non-null pointer to be added
     @return:   If successful, ERESULT_SUCCESS. Otherwise, an
                ERESULT_* error code.
     */
    ERESULT         array_Push (
        ARRAY_DATA      *this,
        void            *pData
    );
    /*!
     Create a string that describes this object and the objects within it.
     Example:
     @code 
        ASTR_DATA      *pDesc = array_ToDebugString(this,4);
     @endcode 
     @param     this    ARRAY object pointer
     @param     indent  number of characters to indent every line of output, can be 0
     @return    If successful, an AStr object which must be released containing the
                description, otherwise OBJ_NIL.
     @warning   Remember to release the returned AStr object.
     */
    ASTR_DATA *     array_ToDebugString(
        ARRAY_DATA      *this,
        int             indent
    );