src/TextIn.h

    

    //****************************************************************
    //* * * * * * * * * * * *  Data Definitions  * * * * * * * * * * *
    //****************************************************************


    typedef struct TextIn_data_s	TEXTIN_DATA;            // Inherits from OBJ
    
    
    TEXTIN_DATA *   TextIn_New (
        void
    );
    
    
    TEXTIN_DATA *   TextIn_NewFromAStr (
        PATH_DATA       *pFilePath,     // Optoinal Path used for Documentation Only
        ASTR_DATA       *pStr,          // Buffer of file data
        uint16_t        fileIndex,      // File Path Index for a separate path table
        uint16_t        tabSize         // Tab Spacing if any (0 will default to 4)
    );
    /*!
     Read a line of text into the given string or obtain a new
     string. '\n' is considered the line terminator and is not
     included in the line. '\r' is ignored.
     @param     this    object pointer
     @param     ppStr   return area for new string object pointer or
                        if not OBJ_NIL on entry to method, truncate
                        given string and use it.
     @param     pLoc    Address of SRCLOC used to indicate the first
                        character of the line
     @return    If successful, ERESULT_SUCCESS and pBuffer contains the
                line of UTF-8 text.  ERESULT_EOF_ERROR if end of file
                is reached for first character.  Otherwise, an ERESULT_*
                error.
     */
    ERESULT         TextIn_GetLineAStr (
        TEXTIN_DATA     *this,
        ASTR_DATA       **ppStr,
        SRCLOC          *pLoc
    );
    /*!
    Indicate if End-of-File has been reached.
    @return    true if EOF has been reached. Otherwise, false.
    */
    bool            TextIn_IsAtEOF (
        TEXTIN_DATA     *this
    );
    /*!
     Create a string that describes this object and the objects within it.
     Example:
     @code 
        ASTR_DATA      *pDesc = TextIn_ToDebugString(this,4);
     @endcode 
     @param     this    object pointer
     @param     indent  number of characters to indent every line of output, can be 0
     @return    If successful, an AStr object which must be released containing the
                description, otherwise OBJ_NIL.
     @warning   Remember to release the returned AStr object.
     */
    ASTR_DATA *    TextIn_ToDebugString (
        TEXTIN_DATA     *this,
        int             indent
    );