py/libCmn.pyx

# vi:nu:et:sts=4 ts=4 sw=4
# libCmn.pyx
# distutils: language = c
#!cythonize
# cython: language_level=3


from cpython cimport bool
ctypedef int int32_t
ctypedef unsigned int uint32_t
ctypedef unsigned short uint16_t
ctypedef long long int64_t
ctypedef unsigned long long uint64_t
ctypedef char W32CHR_T
ctypedef int ERESULT



cimport     AStr
cimport     Path
cimport     hjson
cimport     Name
cimport     Node
cimport     NodeArray
cimport     NodeHash
cimport     SrcLoc


cdef extern from "cmn_defs.h":
    ctypedef struct TOKEN_DATA:
        pass
    ctypedef struct TEXTIN_DATA:
        pass
    ctypedef struct ARRAY_DATA:
        pass
    ctypedef struct DEC_DATA:
        pass
    ctypedef struct W32STR_DATA:
        pass
    ctypedef struct OBJ_IUNKNOWN:
        void (*pRelease)(void *)


cdef extern from "obj.h":
    void obj_Release(void *obj)


cdef extern from "Token.h":
    TOKEN_DATA * Token_New()
    TOKEN_DATA * Token_Copy(TOKEN_DATA *this)
    ASTR_DATA * Token_getTextAStr(TOKEN_DATA *this)
    uint16_t Token_getType(TOKEN_DATA *this)
    ASTR_DATA * Token_ToDebugString(TOKEN_DATA *this, int indent)
    ASTR_DATA * Token_ToJson(TOKEN_DATA *this)

cdef extern from "TextIn.h":
    TEXTIN_DATA * TextIn_New()
    TEXTIN_DATA * TextIn_NewFromAStr(PATH_DATA *pFilePath, ASTR_DATA *pStr, uint16_t fileIndex, uint16_t tabSize)
    ERESULT TextIn_GetLineAStr(TEXTIN_DATA *this, ASTR_DATA **ppStr, SRCLOC *pLoc)
    bint TextIn_IsAtEOF(TEXTIN_DATA *this)
    ASTR_DATA * TextIn_ToDebugString(TEXTIN_DATA *this, int indent)

cdef extern from "array.h":
    ARRAY_DATA * array_New()
    ARRAY_DATA * array_NewWithSize(uint16_t elemSize)
    uint32_t array_getSize(ARRAY_DATA *this)
    ERESULT array_Push(ARRAY_DATA *this, void *pData)
    ERESULT array_Pop(ARRAY_DATA *this, void *pData)
    ASTR_DATA * array_ToDebugString(ARRAY_DATA *this, int indent)

cdef extern from "dec.h":
    DEC_DATA * dec_New()
    int32_t dec_getInt32A(const char *pStr)
    uint64_t dec_getUint64A(const char *pStr)
    ASTR_DATA * dec_UInt64ToJson(uint64_t data)
    ASTR_DATA * dec_ToDebugString(DEC_DATA *this, int indent)



#---------------------------------------------------------------
#                       A S t r
#---------------------------------------------------------------

cdef class AStr:
    cdef ASTR_DATA *c_ptr
    cdef bint _own

    def __cinit__(self):
        self.c_ptr = NULL
        self._own = False

    def __dealloc__(self):
        if self.c_ptr and self._own:
            obj_Release(self.c_ptr)
            self.c_ptr = NULL

    @staticmethod
    def new():
        cdef AStr obj = AStr()
        obj.c_ptr = AStr_New()
        obj._own = True
        if not obj.c_ptr:
            raise MemoryError("Failed to create AStr")
        return obj

    @staticmethod
    def new_from_str(str s):
        cdef AStr obj = AStr()
        obj.c_ptr = AStr_NewA(s.encode('utf-8'))
        obj._own = True
        if not obj.c_ptr:
            raise MemoryError("Failed to create AStr from string")
        return obj

    @property
    def data(self):
        if self.c_ptr:
            return AStr_getData(self.c_ptr).decode('utf-8')
        return None

    @property
    def length(self):
        if self.c_ptr:
            return AStr_getLength(self.c_ptr)
        return 0

    def append(self, str s):
        if not self.c_ptr:
            raise ValueError("AStr object is not initialized")
        if AStr_AppendA(self.c_ptr, s.encode('utf-8')) != 0:
            raise RuntimeError("Failed to append string")

    def to_json(self):
        if not self.c_ptr:
            raise ValueError("AStr object is not initialized")
        cdef ASTR_DATA *json_ptr = AStr_ToJson(self.c_ptr)
        if not json_ptr:
            raise RuntimeError("Failed to convert to JSON")
        cdef AStr json_obj = AStr()
        json_obj.c_ptr = json_ptr
        json_obj._own = True
        return json_obj

    def to_debug_string(self, int indent=0):
        if not self.c_ptr:
            raise ValueError("AStr object is not initialized")
        cdef ASTR_DATA *str_ptr = AStr_ToDebugString(self.c_ptr, indent)
        if not str_ptr:
            raise RuntimeError("Failed to create debug string")
        cdef AStr str_obj = AStr()
        str_obj.c_ptr = str_ptr
        str_obj._own = True
        return str_obj



#---------------------------------------------------------------
#                       N a m e
#---------------------------------------------------------------

cdef class Name:
    cdef Name.NAME_DATA *c_ptr
    cdef bint _own

    def __cinit__(self):
        self.c_ptr = NULL
        self._own = False

    def __dealloc__(self):
        if self.c_ptr and self._own:
            Name.obj_Release(self.c_ptr)
            self.c_ptr = NULL

    @staticmethod
    def new():
        cdef Name obj = Name()
        obj.c_ptr = Name.Name_New()
        obj._own = True
        if not obj.c_ptr:
            raise MemoryError("Failed to create Name")
        return obj

    @staticmethod
    def new_from_astr(AStr astr):
        if not astr.c_ptr:
            raise ValueError("AStr object is not initialized")
        cdef Name obj = Name()
        obj.c_ptr = Name.Name_NewAStr(astr.c_ptr)
        obj._own = True
        if not obj.c_ptr:
            raise MemoryError("Failed to create Name from AStr")
        return obj

    @staticmethod
    def new_from_utf8(str s):
        cdef Name obj = Name()
        obj.c_ptr = Name.Name_NewUTF8(s.encode('utf-8'))
        obj._own = True
        if not obj.c_ptr:
            raise MemoryError("Failed to create Name from UTF-8 string")
        return obj

    @staticmethod
    def new_from_utf8_con(str s):
        cdef Name obj = Name()
        obj.c_ptr = Name.Name_NewUTF8Con(s.encode('utf-8'))
        obj._own = True
        if not obj.c_ptr:
            raise MemoryError("Failed to create Name from UTF-8 constant")
        return obj

    @property
    def str(self):
        if not self.c_ptr:
            raise ValueError("Name object is not initialized")
        cdef AStr.ASTR_DATA *str_ptr = Name.Name_getStr(self.c_ptr)
        if not str_ptr:
            raise RuntimeError("Failed to get AStr string")
        cdef AStr str_obj = AStr()
        str_obj.c_ptr = str_ptr
        str_obj._own = True
        return str_obj

    @property
    def utf8(self):
        if not self.c_ptr:
            raise ValueError("Name object is not initialized")
        cdef char *utf8_ptr = Name.Name_getUTF8(self.c_ptr)
        if not utf8_ptr:
            raise RuntimeError("Failed to get UTF-8 string")
        try:
            result = utf8_ptr.decode('utf-8')
        finally:
            # Assuming Name_getUTF8 requires freeing the returned string
            # If mem_Free is needed, add it to cmn_defs.h and pxd files
            pass
        return result

    @property
    def int(self):
        if not self.c_ptr:
            raise ValueError("Name object is not initialized")
        return Name.Name_getInt(self.c_ptr)

    @property
    def hash(self):
        if not self.c_ptr:
            raise ValueError("Name object is not initialized")
        return Name.Name_getHash(self.c_ptr)

    def assign(self, Name other):
        if not self.c_ptr or not other.c_ptr:
            raise ValueError("Name object is not initialized")
        if Name.Name_Assign(self.c_ptr, other.c_ptr) != 0:
            raise RuntimeError("Failed to assign Name")

    def copy(self):
        if not self.c_ptr:
            raise ValueError("Name object is not initialized")
        cdef Name obj = Name()
        obj.c_ptr = Name.Name_Copy(self.c_ptr)
        obj._own = True
        if not obj.c_ptr:
            raise MemoryError("Failed to copy Name")
        return obj

    def to_json(self):
        if not self.c_ptr:
            raise ValueError("Name object is not initialized")
        cdef AStr.ASTR_DATA *json_ptr = Name.Name_ToJson(self.c_ptr)
        if not json_ptr:
            raise RuntimeError("Failed to convert to JSON")
        cdef AStr json_obj = AStr()
        json_obj.c_ptr = json_ptr
        json_obj._own = True
        return json_obj

    def to_debug_string(self, int indent=0):
        if not self.c_ptr:
            raise ValueError("Name object is not initialized")
        cdef AStr.ASTR_DATA *str_ptr = Name.Name_ToDebugString(self.c_ptr, indent)
        if not str_ptr:
            raise RuntimeError("Failed to create debug string")
        cdef AStr str_obj = AStr()
        str_obj.c_ptr = str_ptr
        str_obj._own = True
        return str_obj

    def to_astr(self):
        if not self.c_ptr:
            raise ValueError("Name object is not initialized")
        cdef AStr.ASTR_DATA *str_ptr = Name.Name_ToAStr(self.c_ptr)
        if not str_ptr:
            raise RuntimeError("Failed to create AStr")
        cdef AStr str_obj = AStr()
        str_obj.c_ptr = str_ptr
        str_obj._own = True
        return str_obj

    def to_utf8(self):
        if not self.c_ptr:
            raise ValueError("Name object is not initialized")
        cdef char *utf8_ptr = Name.Name_ToUTF8(self.c_ptr)
        if not utf8_ptr:
            raise RuntimeError("Failed to create UTF-8 string")
        try:
            result = utf8_ptr.decode('utf-8')
        finally:
            # Assuming Name_ToUTF8 requires freeing the returned string
            # If mem_Free is needed, add it to cmn_defs.h and pxd files
            pass
        return result



#---------------------------------------------------------------
#                       N o d e
#---------------------------------------------------------------

cdef class Node:
    cdef Node.NODE_DATA *c_ptr
    cdef bint _own

    def __cinit__(self):
        self.c_ptr = NULL
        self._own = False

    def __dealloc__(self):
        if self.c_ptr and self._own:
            Node.obj_Release(self.c_ptr)
            self.c_ptr = NULL

    @staticmethod
    def new():
        cdef Node obj = Node()
        obj.c_ptr = Node.Node_New()
        obj._own = True
        if not obj.c_ptr:
            raise MemoryError("Failed to create Node")
        return obj

    @staticmethod
    def new_with_astr(AStr astr, object data=None):
        if not astr.c_ptr:
            raise ValueError("AStr object is not initialized")
        cdef Node obj = Node()
        obj.c_ptr = Node.Node_NewWithAStr(astr.c_ptr, <void *>data if data is not None else NULL)
        obj._own = True
        if not obj.c_ptr:
            raise MemoryError("Failed to create Node with AStr")
        return obj

    @property
    def data(self):
        if self.c_ptr:
            return <object>Node.Node_getData(self.c_ptr)
        return None

    @property
    def name(self):
        if not self.c_ptr:
            raise ValueError("Node object is not initialized")
        cdef Name.NAME_DATA *name_ptr = Node.Node_getName(self.c_ptr)
        if not name_ptr:
            raise RuntimeError("Failed to get Name")
        cdef Name name_obj = Name()
        name_obj.c_ptr = name_ptr
        name_obj._own = True
        return name_obj

    def to_json(self):
        if not self.c_ptr:
            raise ValueError("Node object is not initialized")
        cdef AStr.ASTR_DATA *json_ptr = Node.Node_ToJson(self.c_ptr)
        if not json_ptr:
            raise RuntimeError("Failed to convert to JSON")
        cdef AStr json_obj = AStr()
        json_obj.c_ptr = json_ptr
        json_obj._own = True
        return json_obj

    def to_debug_string(self, int indent=0):
        if not self.c_ptr:
            raise ValueError("Node object is not initialized")
        cdef AStr.ASTR_DATA *str_ptr = Node.Node_ToDebugString(self.c_ptr, indent)
        if not str_ptr:
            raise RuntimeError("Failed to create debug string")
        cdef AStr str_obj = AStr()
        str_obj.c_ptr = str_ptr
        str_obj._own = True
        return str_obj
